--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         // Set favicon based on theme
         const favicon = document.getElementById('favicon');
         if (savedTheme === 'dark') {
-          favicon.href = '/favicon_dark.ico';
+          favicon.href = 'favicon_dark.ico';
         } else {
-          favicon.href = '/favicon_light.ico';
+          favicon.href = 'favicon_light.ico';
         }
       })();
     </script>
