--- a/index.html
+++ b/index.html
@@ -4,61 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="">
-    <link id="favicon" rel="icon" type="image/x-icon" href="favicon_light.ico" />
-    <link rel="icon" href="/favicon_light.ico" type="image/x-icon">
-    <link rel="preload" href="/favicon_dark.ico" as="image">
+    <link id="favicon" rel="icon" type="image/x-icon" href="https://1abcdesign.github.io/favicon_light.ico" />
+    <link rel="preload" href="https://1abcdesign.github.io/favicon_dark.ico" as="image">
 
-    <!-- Preload images in /services/ -->
-    <link rel="preload" href="/services/a01.jpg" as="image">
-    <link rel="preload" href="/services/a02.jpg" as="image">
-    <link rel="preload" href="/services/a03.jpg" as="image">
-    <link rel="preload" href="/services/a04.jpg" as="image">
-    <link rel="preload" href="/services/a05.jpg" as="image">
-    <link rel="preload" href="/services/a06.jpg" as="image">
-    <link rel="preload" href="/services/a07.jpg" as="image">
-    <link rel="preload" href="/services/a08.jpg" as="image">
-    <link rel="preload" href="/services/a09.jpg" as="image">
-    <link rel="preload" href="/services/a10.jpg" as="image">
+    <!-- Preload images -->
+    <link rel="preload" href="https://1abcdesign.github.io/a01.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/a02.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/a03.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/a04.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/a05.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/a06.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/a07.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/a08.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/a09.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/a10.jpg" as="image">
 
-    <link rel="preload" href="/services/b01.jpg" as="image">
-    <link rel="preload" href="/services/b02.jpg" as="image">
-    <link rel="preload" href="/services/b03.jpg" as="image">
-    <link rel="preload" href="/services/b04.jpg" as="image">
-    <link rel="preload" href="/services/b05.jpg" as="image">
-    <link rel="preload" href="/services/b06.jpg" as="image">
-    <link rel="preload" href="/services/b07.jpg" as="image">
-    <link rel="preload" href="/services/b08.jpg" as="image">
-    <link rel="preload" href="/services/b09.jpg" as="image">
-    <link rel="preload" href="/services/b10.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/b01.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/b02.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/b03.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/b04.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/b05.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/b06.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/b07.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/b08.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/b09.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/b10.jpg" as="image">
 
-    <link rel="preload" href="/services/c01.jpg" as="image">
-    <link rel="preload" href="/services/c02.jpg" as="image">
-    <link rel="preload" href="/services/c03.jpg" as="image">
-    <link rel="preload" href="/services/c04.jpg" as="image">
-    <link rel="preload" href="/services/c05.jpg" as="image">
-    <link rel="preload" href="/services/c06.jpg" as="image">
-    <link rel="preload" href="/services/c07.jpg" as="image">
-    <link rel="preload" href="/services/c08.jpg" as="image">
-    <link rel="preload" href="/services/c09.jpg" as="image">
-    <link rel="preload" href="/services/c10.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/c01.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/c02.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/c03.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/c04.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/c05.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/c06.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/c07.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/c08.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/c09.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/c10.jpg" as="image">
 
-    <link rel="preload" href="/services/d01.jpg" as="image">
-    <link rel="preload" href="/services/d02.jpg" as="image">
-    <link rel="preload" href="/services/d03.jpg" as="image">
-    <link rel="preload" href="/services/d04.jpg" as="image">
-    <link rel="preload" href="/services/d05.jpg" as="image">
-    <link rel="preload" href="/services/d06.jpg" as="image">
-    <link rel="preload" href="/services/d07.jpg" as="image">
-    <link rel="preload" href="/services/d08.jpg" as="image">
-    <link rel="preload" href="/services/d09.jpg" as="image">
-    <link rel="preload" href="/services/d10.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/d01.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/d02.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/d03.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/d04.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/d05.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/d06.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/d07.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/d08.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/d09.jpg" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/d10.jpg" as="image">
 
     <!-- Preload logos and icons -->
-    <link rel="preload" href="/logo_light.png" as="image">
-    <link rel="preload" href="/logo_dark.png" as="image">
-    <link rel="preload" href="/sun.svg" as="image">
-    <link rel="preload" href="/moon.svg" as="image">
-    <link rel="preload" href="/logo3d.glb" as="model">
+    <link rel="preload" href="https://1abcdesign.github.io/logo_light.png" as="image">
+    <link rel="preload" href="https://1abcdesign.github.io/logo_dark.png" as="image">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
