--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO: Додавання основних ключових слів -->
-    <meta name="description" content="ABCDΞsign1 — Від Ескізу до Дизайну Під Ключ — Все в Одному Місці. Професійний дизайн інтер'єру, екстер'єру та ландшафтний дизайн в Україні." />
+    <meta name="description" content="ABCDΞsign1 — Дизайну Під Ключ. Професійний дизайн інтер'єру, екстер'єру та ландшафтний дизайн в Україні." />
     <meta name="keywords" content="дизайн інтер'єру, екстер'єрний дизайн, ландшафтний дизайн, дизайнерські послуги, ABCDΞsign1, дизайн під ключ, Україна" />
 
     <!-- Social Media Open Graph Tags -->
@@ -18,7 +18,7 @@
     <!-- Twitter Card для соцмереж -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="ABCDΞsign1 - Дизайн Під Ключ в Україні" />
-    <meta name="twitter:description" content="Від Ескізу до Дизайну Під Ключ — Все в Одному Місці. Надаємо дизайнерські послуги для вашого простору." />
+    <meta name="twitter:description" content="Від Ескізу до Дизайну Під Ключ. Надаємо дизайнерські послуги для вашого простору." />
     <meta name="twitter:image" content="https://1abcdesign.github.io/logo.png" /> <!-- Замініть на реальне посилання на зображення -->
 
     <!-- Favicon -->
@@ -26,12 +26,10 @@
     <link rel="preload" href="https://1abcdesign.github.io/favicon_dark.ico" as="image">
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://db.onlinewebfonts.com/c/1120bd063fd378d88dbeed72f19a8bde?family=Sanserifing" rel="stylesheet">
 
     <!-- Title -->
-    <title>ABCDΞsign1 — Від Ескізу до Дизайну Під Ключ — Все в Одному Місці</title>
+    <title>ABCDΞSIGN1 — Дизайну Під Ключ</title>
 
     <!-- Canonical Link для уникнення дублювання -->
     <link rel="canonical" href="https://abcdesign1.com/" />
