lang depended moto title

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO: Додавання основних ключових слів -->
-    <meta name="description" content="ABCDΞsign1 — Ваш вибір під ключ, що не має замін! Професійний дизайн інтер'єру, екстер'єру та ландшафтний дизайн в Україні." />
-    <meta name="keywords" content="дизайн інтер'єру, екстер'єрний дизайн, ландшафтний дизайн, дизайнерські послуги, ABCDΞsign1, дизайн під ключ, Україна" />
+    <meta name="description" content="ABCDΞSIGN1 — Ваш вибір під ключ, що не має замін! Професійний дизайн інтер'єру, екстер'єру та ландшафтний дизайн в Україні." />
+    <meta name="keywords" content="дизайн інтер'єру, екстер'єрний дизайн, ландшафтний дизайн, дизайнерські послуги, ABCDΞSIGN1, дизайн під ключ, Україна" />
 
     <!-- Social Media Open Graph Tags -->
-    <meta property="og:title" content="ABCDΞsign1 — Ваш вибір під ключ, що не має замін!" />
+    <meta property="og:title" content="ABCDΞSIGN1 — Ваш вибір під ключ, що не має замін!" />
     <meta property="og:description" content="Від Ескізу до Дизайну Під Ключ — Все в Одному Місці. Надаємо комплексні дизайнерські послуги." />
     <meta property="og:image" content="https://1abcdesign.github.io/logo.png" /> <!-- Замініть на реальне посилання на зображення -->
     <meta property="og:url" content="https://abcdesign1.com" />
@@ -17,7 +17,7 @@
 
     <!-- Twitter Card для соцмереж -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="ABCDΞsign1 — Ваш вибір під ключ, що не має замін!" />
+    <meta name="twitter:title" content="ABCDΞSIGN1 — Ваш вибір під ключ, що не має замін!" />
     <meta name="twitter:description" content="Від Ескізу до Дизайну Під Ключ. Надаємо дизайнерські послуги для вашого простору." />
     <meta name="twitter:image" content="https://1abcdesign.github.io/logo.png" /> <!-- Замініть на реальне посилання на зображення -->
 
@@ -72,10 +72,10 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "name": "ABCDΞsign1",
+      "name": "ABCDΞSIGN1",
       "url": "https://abcdesign1.com",
       "logo": "https://1abcdesign.github.io/logo.png",
-      "description": "ABCDΞsign1 — Ваш вибір під ключ, що не має замін! Компанія з надання дизайнерських послуг для інтер'єру, екстер'єру та ландшафтного дизайну.",
+      "description": "ABCDΞSIGN1 — Ваш вибір під ключ, що не має замін! Компанія з надання дизайнерських послуг для інтер'єру, екстер'єру та ландшафтного дизайну.",
       "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+380933789883",
