index main.js path fix + rm useless files from repo

--- a/index.html
+++ b/index.html
@@ -103,6 +103,6 @@
     </script>
 
     <div id="app"></div>
-    <script type="module" src="https://1abcdesign.github.io/src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
