--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <link rel="preload" href="https://1abcdesign.github.io/favicon_dark.ico" as="image">
 
     <!-- Fonts -->
-    <link
+    <!-- <link
       href="https://db.onlinewebfonts.com/c/1120bd063fd378d88dbeed72f19a8bde?family=Sanserifing"
       rel="stylesheet"
       crossorigin="anonymous"
-    >
+    > -->
 
     <!-- Title -->
     <title>ABCDΞSIGN1 — Дизайн під ключ, що не має замін!</title>
