--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <link rel="preload" href="https://1abcdesign.github.io/favicon_dark.ico" as="image">
 
     <!-- Fonts -->
-    <!-- <link
+    <link
       href="https://db.onlinewebfonts.com/c/1120bd063fd378d88dbeed72f19a8bde?family=Sanserifing"
       rel="stylesheet"
       crossorigin="anonymous"
-    > -->
+    >
 
     <!-- Title -->
     <title>ABCDΞSIGN1 — Дизайн під ключ, що не має замін!</title>
@@ -40,6 +40,16 @@
 
     <!-- Robots Meta for indexing -->
     <meta name="robots" content="index, follow">
+
+    <style>
+      [data-theme='light'] {
+        --cursor: url('scissors-black.cur') 0 9, pointer;
+      }
+
+      [data-theme='dark'] {
+        --cursor: url('scissors-white.cur') 0 9, pointer;
+      }
+    </style>
 
     <!-- JavaScript to correct URL | GitHub Pages SPA redirect correction -->
     <script type="text/javascript">
