--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
       [data-theme='dark'] {
         --cursor: url('scissors-white.cur') 0 9, pointer;
       }
+
+      .moto {
+        cursor: var(--cursor);
+      }
     </style>
 
     <!-- JavaScript to correct URL | GitHub Pages SPA redirect correction -->
