--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
     <style>
       [data-theme='light'] {
-        --cursor: url('scissors-black.cur') 0 9, pointer;
+        --cursor: url('https://1abcdesign.github.io/scissors-black.cur') 0 9, pointer;
       }
 
       [data-theme='dark'] {
-        --cursor: url('scissors-white.cur') 0 9, pointer;
+        --cursor: url('https://1abcdesign.github.io/scissors-white.cur') 0 9, pointer;
       }
 
       .moto {
