--- a/index.html
+++ b/index.html
@@ -43,11 +43,17 @@
 
     <style>
       [data-theme='light'] {
-        --cursor: url('https://1abcdesign.github.io/scissors-black.cur') 0 9, pointer;
+        --cursor: url('https://1abcdesign.github.io/scissors-black.cur') 0 9,
+                  url('https://1abcdesign.github.io/scissors-black.ico') 0 9,
+                  url('https://1abcdesign.github.io/scissors-black.png') 0 9,
+                  pointer;
       }
 
       [data-theme='dark'] {
-        --cursor: url('https://1abcdesign.github.io/scissors-white.cur') 0 9, pointer;
+        --cursor: url('https://1abcdesign.github.io/scissors-white.cur') 0 9,
+                  url('https://1abcdesign.github.io/scissors-white.ico') 0 9,
+                  url('https://1abcdesign.github.io/scissors-white.png') 0 9,
+                  pointer;
       }
 
       .moto {
