glass-effect to all links

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
     <style>
       [data-theme='light'] {
-        --cursor: url('https://1abcdesign.github.io/scissors-black.cur') 0 9,
-                  url('https://1abcdesign.github.io/scissors-black.ico') 0 9,
-                  url('https://1abcdesign.github.io/scissors-black.png') 0 9,
+        --cursor: url('https://1abcdesign.github.io/scissors-white.cur') 0 9,
+                  url('https://1abcdesign.github.io/scissors-white.ico') 0 9,
+                  url('https://1abcdesign.github.io/scissors-white.png') 0 9,
                   pointer;
       }
 
@@ -53,6 +53,10 @@
         --cursor: url('https://1abcdesign.github.io/scissors-white.cur') 0 9,
                   url('https://1abcdesign.github.io/scissors-white.ico') 0 9,
                   url('https://1abcdesign.github.io/scissors-white.png') 0 9,
+                  pointer;
+        --cursor: url('https://1abcdesign.github.io/scissors-black.cur') 0 9,
+                  url('https://1abcdesign.github.io/scissors-black.ico') 0 9,
+                  url('https://1abcdesign.github.io/scissors-black.png') 0 9,
                   pointer;
       }
 
@@ -161,7 +165,7 @@
     }
     </script>
 
-    <div id="app"></div>
+    <div id="app" class="flex-align"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
