--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:image" content="https://1abcdesign.github.io/logo.png" /> <!-- Replace with real image link -->
 
     <!-- Favicon -->
-    <link id="favicon" rel="icon" type="image/x-icon" href="https://1abcdesign.github.io/favicon_light.ico" />
+    <link id="favicon" rel="shortcut icon" type="image/x-icon" href="https://1abcdesign.github.io/favicon_light.ico" />
     <link rel="preload" href="https://1abcdesign.github.io/favicon_dark.ico" as="image">
 
     <!-- Fonts -->
