--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk" xml:lang="uk"> <!-- Language set to Ukrainian for SEO and localization -->
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content" />
 
     <!-- SEO: Adding essential keywords -->
     <meta name="description" content="ABCDΞSIGN1: Дизайн інтер'єру, екстер'єру та ландшафту під ключ в Україні — Ваш вибір, що не має замін!" />
