--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         --grey: #888;
         --blur-img: 0.5px;
         --blur-drop: 0.142857rem;
-        --transition-duration: 666ms; /* Initialize variable for transition duration */
+        --tr-dur: 666ms; /* Initialize variable for transition duration */
 
         --safe-top: env(safe-area-inset-top);
         --safe-bottom: env(safe-area-inset-bottom);
