--- a/index.html
+++ b/index.html
@@ -51,21 +51,16 @@
         --color: #000;
         --color-alt: #222;
         --shadow: #8888;
-        --cursor: url('https://1abcdesign.github.io/scissors-black.cur') 0 9,
-                  url('https://1abcdesign.github.io/scissors-black.ico') 0 9,
-                  url('https://1abcdesign.github.io/scissors-black.png') 0 9,
-                  pointer;
+        --link-gradient: linear-gradient(45deg, var(--bg) 0%, var(--bg-alt) 12.5%, transparent 75%, var(--color-alt) 100%);
         --cursor: url('https://1abcdesign.github.io/scissors-white.cur') 0 9,
                   url('https://1abcdesign.github.io/scissors-white.ico') 0 9,
                   url('https://1abcdesign.github.io/scissors-white.png') 0 9,
                   pointer;
         background: #fff;
         color: #000;
-        --link-gradient: linear-gradient(45deg, var(--bg) 0%, var(--bg-alt) 12.5%, transparent 75%, var(--color-alt) 100%);
-}
+      }
 
-[data-theme='dark'] {
-      --link-gradient: linear-gradient(45deg, var(--color) 0%, transparent 20%, transparent 66%, var(--color-alt) 100%);
+      [data-theme='dark'] {
         --bg: #000;
         --bg-05: #0002;
         --bg-alt: #222;
@@ -73,14 +68,11 @@
         --color: #fff;
         --color-alt: #ddd;
         --shadow: #8888;
-        --cursor: url('https://1abcdesign.github.io/scissors-white.cur') 0 9,
-                  url('https://1abcdesign.github.io/scissors-white.ico') 0 9,
-                  url('https://1abcdesign.github.io/scissors-white.png') 0 9,
-                  pointer;
+        --link-gradient: linear-gradient(45deg, var(--color) 0%, transparent 20%, transparent 66%, var(--color-alt) 100%);
         --cursor: url('https://1abcdesign.github.io/scissors-black.cur') 0 9,
-                  url('https://1abcdesign.github.io/scissors-black.ico') 0 9,
-                  url('https://1abcdesign.github.io/scissors-black.png') 0 9,
-                  pointer;
+                        url('https://1abcdesign.github.io/scissors-black.ico') 0 9,
+                        url('https://1abcdesign.github.io/scissors-black.png') 0 9,
+                        pointer;
         background: #000;
         color: #fff;
       }
@@ -88,7 +80,7 @@
       :root {
         --grey: #888;
         --blur-img: 0.5px;
-        --blur-drop: 0.15rem;
+        --blur-drop: 0.142857rem;
         --tr-dur: 666ms; /* Initialize variable for transition duration */
 
         --safe-top: env(safe-area-inset-top);
@@ -103,8 +95,9 @@
       }
 
       body {
-        margin: 0;
         padding: 0;
+        margin: 0;
+        overflow: hidden !important;
       }
 
       body::after {
