--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="uk" xml:lang="uk"> <!-- Language set to Ukrainian for SEO and localization -->
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO: Adding essential keywords -->
     <meta name="description" content="ABCDΞSIGN1: Дизайн інтер'єру, екстер'єру та ландшафту під ключ в Україні — Ваш вибір, що не має замін!" />
@@ -23,7 +24,7 @@
 
     <!-- Favicon -->
     <link id="favicon" rel="shortcut icon" type="image/x-icon" href="https://1abcdesign.github.io/favicon_light.ico" />
-    <link rel="preload" href="https://1abcdesign.github.io/favicon_dark.ico" as="image">
+    <!-- <link rel="preload" href="https://1abcdesign.github.io/favicon_dark.ico" as="image"> -->
     <link rel="preload" href="https://1abcdesign.github.io/logo.png" as="image">
 
     <!-- Fonts -->
@@ -78,20 +79,8 @@
       }
 
       :root {
-        --grey: #888;
-        --blur-img: 0.5px;
-        --blur-drop: 0.142857rem;
-        --tr-dur: 666ms; /* Initialize variable for transition duration */
-
-        --safe-top: env(safe-area-inset-top);
-        --safe-bottom: env(safe-area-inset-bottom);
-        --vh: calc((100svh - var(--safe-top) - var(--safe-bottom)) / 100);
-
-        font-size: min(calc(2 * var(--vh)), calc(20 / 5.5 * 1vmin));
-
-        --main-h: calc(100svh - 2.75rem - 5.5rem);
-        --main-cent: calc(var(--main-h) / 100);
-        --main-em: calc(var(--main-h) / 41.75);
+        --safe-top: env(safe-area-inset-top, 0px);
+        --safe-bottom: env(safe-area-inset-bottom, 0px);
       }
 
       body {
@@ -121,6 +110,33 @@
       }
     </style>
 
+    <!-- <script>
+      function setVhProperty() {
+        // Calculate the viewport height in pixels
+        const vh = window.visualViewport.height * 0.01;
+
+        // Get computed safe area insets from CSS
+        const computedStyle = getComputedStyle(document.documentElement);
+        const safeTop = parseFloat(computedStyle.getPropertyValue('--safe-top') || 0);
+        const safeBottom = parseFloat(computedStyle.getPropertyValue('--safe-bottom') || 0);
+
+        // Calculate adjusted --vh value considering safe areas
+        const adjustedVh = (window.visualViewport.height - safeTop - safeBottom) * 0.01;
+
+        // Set custom properties on the root element
+        document.documentElement.style.setProperty('--vh', `${adjustedVh}px`);
+      }
+
+      document.addEventListener("DOMContentLoaded", function() {
+        // Set the property initially
+        setVhProperty();
+
+        // Update the property on window resize or change orientation
+        window.addEventListener('resize', setVhProperty);
+        window.addEventListener('orientationchange', setVhVariable);
+      });
+    </script> -->
+
     <!-- JavaScript to correct URL | GitHub Pages SPA redirect correction -->
     <script type="text/javascript">
       (function (l) {
@@ -137,6 +153,9 @@
       })(window.location);
     </script>
 
+    <!-- Original script with integrity
+    <script  src="https://1abcdesign.github.io/index.html" integrity="sha384-PHX5EqHjlZhLROE10LSdlRoIwZafc9YgaZZMaQ7Y5V+ILD38Y9JEV6uudLks3PQQ" crossorigin="anonymous"></script> -->
+
     <!-- Polyfill check and load -->
     <script type="text/javascript">
       (function() {
@@ -145,33 +164,39 @@
         const supportsLocalStorage = typeof window.localStorage !== 'undefined';
         const supportsPromise = typeof window.Promise !== 'undefined';
         const supportsFlexbox = 'flex' in document.documentElement.style;
-        const supportsSVG = !!document.createElementNS && !!document.createElementNS('http://www.w3.org/2000/svg', 'svg').createSVGRect;
+
+        // Function to add a script with proper attributes
+        function loadScript(src, attributes = {}) {
+          const script = document.createElement('script');
+          script.src = src;
+          script.async = true; // Ensure async loading
+          Object.keys(attributes).forEach(attr => script.setAttribute(attr, attributes[attr]));
+          document.head.appendChild(script);
+        }
 
         // Load polyfills if needed
         if (!supportsMatchMedia) {
-          const script = document.createElement('script');
-          script.src = 'https://cdn.polyfill.io/v3/polyfill.min.js?features=matchMedia';
-          document.head.appendChild(script);
+          loadScript('https://cdn.polyfill.io/v3/polyfill.min.js?features=matchMedia', {
+            integrity: integrityHash,
+            crossorigin: 'anonymous'
+          });
         }
         if (!supportsLocalStorage) {
-          const script = document.createElement('script');
-          script.innerHTML = 'alert("Your browser doesn\'t support local storage. Some features may not work.")';
-          document.head.appendChild(script);
+          const alertScript = document.createElement('script');
+          alertScript.textContent = "alert('Your browser does not support local storage. Some features may not work.');";
+          document.head.appendChild(alertScript);
         }
         if (!supportsPromise) {
-          const script = document.createElement('script');
-          script.src = 'https://cdnjs.cloudflare.com/ajax/libs/core-js/3.19.0/minified.js';
-          document.head.appendChild(script);
+          loadScript('https://cdnjs.cloudflare.com/ajax/libs/core-js/3.19.0/minified.js', {
+            integrity: integrityHash,
+            crossorigin: 'anonymous'
+          });
         }
         if (!supportsFlexbox) {
-          const script = document.createElement('script');
-          script.src = 'https://cdnjs.cloudflare.com/ajax/libs/flexibility/2.0.1/flexibility.min.js';
-          document.head.appendChild(script);
-        }
-        if (!supportsSVG) {
-          const script = document.createElement('script');
-          script.src = 'https://cdnjs.cloudflare.com/ajax/libs/svg4everybody/2.1.9/svg4everybody.min.js';
-          document.head.appendChild(script);
+          loadScript('https://cdnjs.cloudflare.com/ajax/libs/flexibility/2.0.1/flexibility.min.js', {
+            integrity: integrityHash,
+            crossorigin: 'anonymous'
+          });
         }
       })();
     </script>
