nice sizing variant

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk" xml:lang="uk"> <!-- Language set to Ukrainian for SEO and localization -->
   <head>
     <meta charset="UTF-8" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content" /> -->
+    <!-- <meta name="viewport" content="interactive-widget=resizes-content" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO: Adding essential keywords -->
@@ -35,7 +35,7 @@
     >
 
     <!-- Title -->
-    <title>ABCDΞSIGN1 — Дизайн під ключ, що не має замін!</title>
+    <title>ABCDΞSIGN1 — Ваш вибір під ключ, що не має замін!</title>
 
     <!-- Canonical Link to avoid duplication -->
     <link rel="canonical" href="https://abcdesign1.com" />
@@ -110,33 +110,6 @@
       }
     </style>
 
-    <!-- <script>
-      function setVhProperty() {
-        // Calculate the viewport height in pixels
-        const vh = window.visualViewport.height * 0.01;
-
-        // Get computed safe area insets from CSS
-        const computedStyle = getComputedStyle(document.documentElement);
-        const safeTop = parseFloat(computedStyle.getPropertyValue('--safe-top') || 0);
-        const safeBottom = parseFloat(computedStyle.getPropertyValue('--safe-bottom') || 0);
-
-        // Calculate adjusted --vh value considering safe areas
-        const adjustedVh = (window.visualViewport.height - safeTop - safeBottom) * 0.01;
-
-        // Set custom properties on the root element
-        document.documentElement.style.setProperty('--vh', `${adjustedVh}px`);
-      }
-
-      document.addEventListener("DOMContentLoaded", function() {
-        // Set the property initially
-        setVhProperty();
-
-        // Update the property on window resize or change orientation
-        window.addEventListener('resize', setVhProperty);
-        window.addEventListener('orientationchange', setVhVariable);
-      });
-    </script> -->
-
     <!-- JavaScript to correct URL | GitHub Pages SPA redirect correction -->
     <script type="text/javascript">
       (function (l) {
@@ -152,9 +125,6 @@
         }
       })(window.location);
     </script>
-
-    <!-- Original script with integrity
-    <script  src="https://1abcdesign.github.io/index.html" integrity="sha384-PHX5EqHjlZhLROE10LSdlRoIwZafc9YgaZZMaQ7Y5V+ILD38Y9JEV6uudLks3PQQ" crossorigin="anonymous"></script> -->
 
     <!-- Polyfill check and load -->
     <script type="text/javascript">
