--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <meta name="viewport" content="interactive-widget=resizes-content" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, interactive-widget=overlays-content" />
 
     <!-- SEO: Adding essential keywords -->
     <meta name="description" content="ABCDΞSIGN1: Дизайн інтер'єру, екстер'єру та ландшафту під ключ в Україні — Ваш вибір, що не має замін!" />
