--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="uk" xml:lang="uk"> <!-- Language set to Ukrainian for SEO and localization -->
   <head>
     <meta charset="UTF-8" />
-    <!-- <meta name="viewport" content="interactive-widget=resizes-content" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Initial viewport size, shape and the effect of interactive UI widgets -->
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, interactive-widget=overlays-content" />
 
     <!-- SEO: Adding essential keywords -->
     <meta name="description" content="ABCDΞSIGN1: Дизайн інтер'єру, екстер'єру та ландшафту під ключ в Україні — Ваш вибір, що не має замін!" />
