--- a/index.html
+++ b/index.html
@@ -28,11 +28,18 @@
     <link rel="preload" href="https://1abcdesign.github.io/logo.png" as="image">
 
     <!-- Fonts -->
-    <link
+    <!-- <link
       href="https://db.onlinewebfonts.com/c/1120bd063fd378d88dbeed72f19a8bde?family=Sanserifing"
       rel="stylesheet"
       crossorigin="anonymous"
-    >
+    > -->
+    <link
+      rel="preload"
+      href="https://db.onlinewebfonts.com/c/1120bd063fd378d88dbeed72f19a8bde?family=Sanserifing"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
 
     <!-- Title -->
     <title>ABCDΞSIGN1 — Ваш вибір під ключ, що не має замін!</title>
