--- a/index.html
+++ b/index.html
@@ -33,13 +33,21 @@
       rel="stylesheet"
       crossorigin="anonymous"
     > -->
+    <!-- Fonts -->
     <link
-      rel="preload"
       href="https://db.onlinewebfonts.com/c/1120bd063fd378d88dbeed72f19a8bde?family=Sanserifing"
-      as="font"
-      type="font/woff2"
+      rel="stylesheet"
       crossorigin="anonymous"
+      media="print"
+      onload="this.media='all'"
     />
+    <noscript>
+      <link
+        href="https://db.onlinewebfonts.com/c/1120bd063fd378d88dbeed72f19a8bde?family=Sanserifing"
+        rel="stylesheet"
+        crossorigin="anonymous"
+      />
+    </noscript>
 
     <!-- Title -->
     <title>ABCDΞSIGN1 — Ваш вибір під ключ, що не має замін!</title>
