--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, interactive-widget=overlays-content" />
 
     <!-- SEO: Adding essential keywords -->
-    <meta name="description" content="ABCDΞSIGN1: Дизайн інтер'єру, екстер'єру та ландшафту під ключ в Україні — Ваш вибір, що не має замін!" />
-    <meta name="keywords" content="дизайн інтер'єру, екстер'єрний дизайн, ландшафтний дизайн, дизайнерські послуги, ABCDΞSIGN1, дизайн під ключ, Україна" />
+    <meta name="description" content="1ABCDΞSIGN: Дизайн інтер'єру, екстер'єру та ландшафту під ключ в Україні — Ваш вибір, що не має замін!" />
+    <meta name="keywords" content="дизайн інтер'єру, екстер'єрний дизайн, ландшафтний дизайн, дизайнерські послуги, 1ABCDΞSIGN, дизайн під ключ, Україна" />
 
     <!-- Social Media Open Graph Tags -->
-    <meta property="og:title" content="ABCDΞSIGN1 — Ваш вибір під ключ, що не має замін!" />
+    <meta property="og:title" content="1ABCDΞSIGN — Від ABC до Під-ключ-Все ДИЗАЙН!" />
     <meta property="og:description" content="Від Ескізу до Дизайну Під Ключ — Все в Одному Місці. Надаємо комплексні дизайнерські послуги." />
     <meta property="og:image" content="https://1abcdesign.github.io/logo.png" /> <!-- Replace with real image link -->
     <meta property="og:url" content="https://abcdesign1.com" />
@@ -18,7 +18,7 @@
 
     <!-- Twitter Card for social media -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="ABCDΞSIGN1 — Ваш вибір під ключ, що не має замін!" />
+    <meta name="twitter:title" content="1ABCDΞSIGN — Від ABC до Під-ключ-Все ДИЗАЙН!" />
     <meta name="twitter:description" content="Від Ескізу до Дизайну Під Ключ. Надаємо дизайнерські послуги для вашого простору." />
     <meta name="twitter:image" content="https://1abcdesign.github.io/logo.png" /> <!-- Replace with real image link -->
 
@@ -44,7 +44,7 @@
     </noscript>
 
     <!-- Title -->
-    <title>ABCDΞSIGN1 — Ваш вибір під ключ, що не має замін!</title>
+    <title>1ABCDΞSIGN — Від ABC до Під-ключ-Все ДИЗАЙН!</title>
 
     <!-- Canonical Link to avoid duplication -->
     <link rel="canonical" href="https://abcdesign1.com" />
@@ -61,7 +61,7 @@
         --color: #000;
         --color-alt: #222;
         --shadow: #8888;
-        --link-gradient: linear-gradient(45deg, var(--bg) 0%, var(--bg-alt) 12.5%, transparent 75%, var(--color-alt) 100%);
+        --gradient: linear-gradient(45deg, var(--bg) 0%, var(--bg-alt) 12.5%, transparent 75%, var(--color-alt) 100%);
         --cursor: url('https://1abcdesign.github.io/scissors-white.cur') 0 9,
                   url('https://1abcdesign.github.io/scissors-white.ico') 0 9,
                   url('https://1abcdesign.github.io/scissors-white.png') 0 9,
@@ -78,7 +78,7 @@
         --color: #fff;
         --color-alt: #ddd;
         --shadow: #8888;
-        --link-gradient: linear-gradient(45deg, var(--color) 0%, transparent 20%, transparent 66%, var(--color-alt) 100%);
+        --gradient: linear-gradient(45deg, var(--color) 0%, transparent 20%, transparent 66%, var(--color-alt) 100%);
         --cursor: url('https://1abcdesign.github.io/scissors-black.cur') 0 9,
                         url('https://1abcdesign.github.io/scissors-black.ico') 0 9,
                         url('https://1abcdesign.github.io/scissors-black.png') 0 9,
@@ -216,10 +216,10 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "name": "ABCDΞSIGN1",
+      "name": "1ABCDΞSIGN",
       "url": "https://abcdesign1.com",
       "logo": "https://1abcdesign.github.io/logo.png",
-      "description": "ABCDΞSIGN1 — Ваш вибір під ключ, що не має замін! Компанія з надання дизайнерських послуг для інтер'єру, екстер'єру та ландшафтного дизайну.",
+      "description": "1ABCDΞSIGN — Від ABC до Під-ключ-Все ДИЗАЙН! Компанія з надання дизайнерських послуг для інтер'єру, екстер'єру та ландшафтного дизайну.",
       "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+380933789883",
