--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
     <meta name="robots" content="index, follow">
 
     <style>
-      [data-theme='light'] {
+ [data-theme='light'] {
         --bg: #fff;
         --bg-05: #fff2;
         --bg-alt: #ddd;
         --color: #000;
         --color-alt: #222;
         --shadow: #8888;
-        --gradient: linear-gradient(45deg, var(--bg) 0%, var(--bg-alt) 12.5%, transparent 75%, var(--color-alt) 100%);
+        --gradient: linear-gradient(45deg, var(--grey) 0%, transparent 25%, transparent 75%, var(--color-alt) 100%);
         --cursor: url('https://1abcdesign.github.io/scissors-white.cur') 0 9,
                   url('https://1abcdesign.github.io/scissors-white.ico') 0 9,
                   url('https://1abcdesign.github.io/scissors-white.png') 0 9,
@@ -76,7 +76,7 @@
         --color: #fff;
         --color-alt: #ddd;
         --shadow: #8888;
-        --gradient: linear-gradient(45deg, var(--color) 0%, transparent 20%, transparent 66%, var(--color-alt) 100%);
+        --gradient: linear-gradient(45deg, var(--color-alt) 0%, transparent 25%, transparent 66%, var(--color-alt) 100%);
         --cursor: url('https://1abcdesign.github.io/scissors-black.cur') 0 9,
                         url('https://1abcdesign.github.io/scissors-black.ico') 0 9,
                         url('https://1abcdesign.github.io/scissors-black.png') 0 9,
@@ -86,9 +86,19 @@
       }
 
       :root {
-        --safe-top: env(safe-area-inset-top, 0px);
-        --safe-bottom: env(safe-area-inset-bottom, 0px);
-        --bg-img-op: 0.1;
+        --grey: #808080;
+        --blur-drop: 0.142857rem;
+        --tr-dur: 666ms; /* Initialize variable for transition duration */
+        --safe-top: env(safe-area-inset-top);
+        --safe-bottom: env(safe-area-inset-bottom);
+        --moto-gradient: linear-gradient(45deg, var(--bg) 0%, var(--bg-alt) 12.5%, transparent 75%, var(--color) 100%);
+        --s-t-gradient: linear-gradient(45deg, transparent 0%, var(--bg-alt) 33%, var(--bg) 66%, transparent 100%);
+        --vh: calc((100svh - var(--safe-top) - var(--safe-bottom)) / 100);
+        font-size: min(calc(2 * var(--vh)), calc(20 / 5.5 * 1vmin));
+        --main-h: calc(100svh - 2.75rem - 5.5rem);
+        --main-cent: calc((100svh - 2.75rem - 5.5rem) / 100);
+        --main-em: calc((100svh - 2.75rem - 5.5rem) / 41.75);
+        --blur-img: 0.5px;
       }
 
       body, #logoOverlay {
@@ -108,10 +118,8 @@
         background-image: url('https://1abcdesign.github.io/logo.png');
         background-repeat: repeat;
         background-position: center;
-        opacity: 0.125;
+        opacity: 0.15;
         z-index: -1;
-        filter: blur(var(--blur-img));
-        -webkit-filter: blur(var(--blur-img));
       }
 
       @media (orientation: portrait) {
