redesign to ABCDESIGN, add golden shadows

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, interactive-widget=overlays-content" />
 
     <!-- SEO: Adding essential keywords -->
-    <meta name="description" content="1ABCDΞSIGN: Дизайн інтер'єру, екстер'єру та ландшафту під ключ в Україні — Ваш вибір, що не має замін!" />
-    <meta name="keywords" content="дизайн інтер'єру, екстер'єрний дизайн, ландшафтний дизайн, дизайнерські послуги, 1ABCDΞSIGN, дизайн під ключ, Україна" />
+    <meta name="description" content="ABCDΞSIGN: Дизайн інтер'єру, екстер'єру та ландшафту під ключ в Україні — Ваш вибір, що не має замін!" />
+    <meta name="keywords" content="дизайн інтер'єру, екстер'єрний дизайн, ландшафтний дизайн, дизайнерські послуги, ABCDΞSIGN, дизайн під ключ, Україна" />
 
     <!-- Social Media Open Graph Tags -->
-    <meta property="og:title" content="1ABCDΞSIGN — ОДИН від «А-Б-Ц» до «Під-ключ-Все» ДИЗАЙН!" />
+    <meta property="og:title" content="ABCDΞSIGN — Від «А-Б-Ц» до «Під-ключ-Все» Дизайн!" />
     <meta property="og:description" content="Від Ескізу до Дизайну Під Ключ — Все в Одному Місці. Надаємо комплексні дизайнерські послуги." />
     <meta property="og:image" content="https://1abcdesign.github.io/logo.png" /> <!-- Replace with real image link -->
     <meta property="og:url" content="https://1abcdesign.com" />
@@ -18,7 +18,7 @@
 
     <!-- Twitter Card for social media -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="1ABCDΞSIGN — ОДИН від «А-Б-Ц» до «Під-ключ-Все» ДИЗАЙН!" />
+    <meta name="twitter:title" content="ABCDΞSIGN — Від «А-Б-Ц» до «Під-ключ-Все» Дизайн!" />
     <meta name="twitter:description" content="Від Ескізу до Дизайну Під Ключ. Надаємо дизайнерські послуги для вашого простору." />
     <meta name="twitter:image" content="https://1abcdesign.github.io/logo.png" /> <!-- Replace with real image link -->
 
@@ -44,7 +44,7 @@
     </noscript>
 
     <!-- Title -->
-    <title>1ABCDΞSIGN — ОДИН від «А-Б-Ц» до «Під-ключ-Все» ДИЗАЙН!</title>
+    <title>ABCDΞSIGN — Від «А-Б-Ц» до «Під-ключ-Все» Дизайн!</title>
 
     <!-- Canonical Link to avoid duplication -->
     <link rel="canonical" href="https://1abcdesign.com" />
@@ -99,6 +99,7 @@
         --main-cent: calc((100svh - 2.75rem - 5.5rem) / 100);
         --main-em: calc((100svh - 2.75rem - 5.5rem) / 41.75);
         --blur-img: 0.5px;
+        --gold: #d4af37;
       }
 
       body, #logoOverlay {
@@ -223,10 +224,10 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "name": "1ABCDΞSIGN",
+      "name": "ABCDΞSIGN",
       "url": "https://1abcdesign.com",
       "logo": "https://1abcdesign.github.io/logo.png",
-      "description": "1ABCDΞSIGN — ОДИН від «А-Б-Ц» до «Під-ключ-Все» ДИЗАЙН! Компанія з надання дизайнерських послуг для інтер'єру, екстер'єру та ландшафтного дизайну.",
+      "description": "ABCDΞSIGN — Від «А-Б-Ц» до «Під-ключ-Все» Дизайн! Компанія з надання дизайнерських послуг для інтер'єру, екстер'єру та ландшафтного дизайну.",
       "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+380933789883",
