--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <style>
  [data-theme='light'] {
         --bg: #fff;
+        --semitransparent: #fff2;
         --bg-05: #fff2;
         --bg-alt: #ddd;
         --color: #000;
@@ -71,6 +72,7 @@
 
       [data-theme='dark'] {
         --bg: #000;
+        --semitransparent: #0002;
         --bg-05: #0002;
         --bg-alt: #222;
         --color: #fff;
@@ -87,7 +89,7 @@
 
       :root {
         --grey: #808080;
-        --blur-drop: 0.142857rem;
+        --blur-drop: 0.125rem;
         --tr-dur: 666ms; /* Initialize variable for transition duration */
         --safe-top: env(safe-area-inset-top);
         --safe-bottom: env(safe-area-inset-bottom);
@@ -99,7 +101,8 @@
         --main-cent: calc((100svh - 2.75rem - 5.5rem) / 100);
         --main-em: calc((100svh - 2.75rem - 5.5rem) / 41.75);
         --blur-img: 0.5px;
-        --gold: #d4af37;
+        --metallic: #d4af37;
+        --metallic-25: #d4af3740;
       }
 
       body, #logoOverlay {
@@ -119,7 +122,7 @@
         background-image: url('https://1abcdesign.github.io/logo.png');
         background-repeat: repeat;
         background-position: center;
-        opacity: 0.15;
+        opacity: 0.125;
         z-index: -1;
       }
 
@@ -212,6 +215,14 @@
           localStorage.setItem('theme', savedTheme);
         }
         document.documentElement.setAttribute('data-theme', savedTheme);
+
+        let savedColor = localStorage.getItem('color');
+        if (!savedColor) {
+          savedColor = prefersDarkMode ? '#d4af37' : '#e6e8fa';
+          localStorage.setItem('color', savedColor);
+        }
+        document.documentElement.style.setProperty('--metallic', savedColor);
+        document.documentElement.style.setProperty('--metallic-25', savedColor + '40');
 
         const favicon = document.getElementById('favicon');
         favicon.href = savedTheme === 'dark' ? 'https://1abcdesign.github.io/favicon_dark.ico' : 'https://1abcdesign.github.io/favicon_light.ico';
