comment out color switcher, back to silver, remove GPU overloading shadows

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
         --main-cent: calc((100svh - 2.75rem - 5.5rem) / 100);
         --main-em: calc((100svh - 2.75rem - 5.5rem) / 41.75);
         --blur-img: 0.5px;
-        --metallic: #d4af37;
-        --metallic-25: #d4af3740;
+        --metallic: #e6e8fa;
+        --metallic-25: #e6e8fa40;
       }
 
       body, #logoOverlay {
