--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
       :root {
         --grey: #808080;
-        --blur-drop: 0.142857rem;
+        --blur-drop: 0.5vmin;
         --tr-dur: 666ms; /* Initialize variable for transition duration */
         --safe-top: env(safe-area-inset-top);
         --safe-bottom: env(safe-area-inset-bottom);
@@ -122,7 +122,7 @@
         background-image: url('https://1abcdesign.github.io/logo.png');
         background-repeat: repeat;
         background-position: center;
-        opacity: 0.125;
+        opacity: 0.1;
         z-index: -1;
       }
 
